// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Platform/Webex Avatar Active 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <img
        alt="avatar"
        className="wxc-avatar__image"
        onError={[Function]}
        src="./images/barbara.png"
      />
      <div
        className="wxc-avatar__status-icon-container"
      >
        <svg
          className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-active"
          fill="none"
          height={24}
          style={Object {}}
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 2.5C13.33 2.5 10.7199 3.29176 8.49981 4.77516C6.27974 6.25856 4.54942 8.36697 3.52763 10.8338C2.50585 13.3006 2.2385 16.015 2.7594 18.6337C3.28031 21.2525 4.56606 23.6579 6.45406 25.5459C8.34207 27.434 10.7475 28.7197 13.3663 29.2406C15.985 29.7615 18.6994 29.4942 21.1662 28.4724C23.633 27.4506 25.7414 25.7203 27.2248 23.5002C28.7082 21.2801 29.5 18.67 29.5 16C29.496 12.4208 28.0724 8.98935 25.5415 6.45847C23.0107 3.9276 19.5792 2.504 16 2.5Z"
          />
        </svg>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Bot 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <img
        alt="avatar"
        className="wxc-avatar__image"
        onError={[Function]}
        src="./images/barbara.png"
      />
      <svg
        className="wxc-avatar__bot-badge"
        viewBox="0 0 26 26"
      >
        <text
          x="50%"
          y="57%"
        >
          Bot
        </text>
      </svg>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Call 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <img
        alt="avatar"
        className="wxc-avatar__image"
        onError={[Function]}
        src="./images/barbara.png"
      />
      <div
        className="wxc-avatar__status-icon-container"
      >
        <svg
          className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-call"
          fill="none"
          height={24}
          style={Object {}}
          viewBox="0 0 36 36"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M28.7871 9.72433C28.562 9.58573 28.3044 9.50895 28.0402 9.50176C27.7759 9.49456 27.5145 9.55719 27.2822 9.68333L23.5 12.088V10.0007C23.4987 8.80766 23.0242 7.66382 22.1805 6.82018C21.3369 5.97655 20.1931 5.50203 19 5.50073H7C5.80692 5.50203 4.66308 5.97655 3.81945 6.82018C2.97582 7.66382 2.5013 8.80766 2.5 10.0007V22.0007C2.5013 23.1938 2.97582 24.3376 3.81945 25.1813C4.66308 26.0249 5.80692 26.4994 7 26.5007H19C20.1931 26.4994 21.3369 26.0249 22.1805 25.1813C23.0241 24.3376 23.4987 23.1938 23.5 22.0007V19.9107L27.3271 22.3413C27.5357 22.446 27.7657 22.5008 27.999 22.5013C28.3966 22.5 28.7775 22.3414 29.0584 22.06C29.3394 21.7787 29.4975 21.3976 29.4983 21V11C29.4992 10.7442 29.4343 10.4925 29.3097 10.2691C29.1852 10.0456 29.0052 9.85804 28.7871 9.72433Z"
          />
        </svg>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Do Not Disturb 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <img
        alt="avatar"
        className="wxc-avatar__image"
        onError={[Function]}
        src="./images/barbara.png"
      />
      <div
        className="wxc-avatar__status-icon-container"
      >
        <svg
          className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-dnd"
          fill="none"
          height={24}
          style={Object {}}
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M16 29.5C23.4558 29.5 29.5 23.4558 29.5 16C29.5 8.54416 23.4558 2.5 16 2.5C8.54416 2.5 2.5 8.54416 2.5 16C2.5 23.4558 8.54416 29.5 16 29.5ZM10 15C9.44772 15 9 15.4477 9 16C9 16.5523 9.44772 17 10 17H22C22.5523 17 23 16.5523 23 16C23 15.4477 22.5523 15 22 15H10Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Inactive 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <img
        alt="avatar"
        className="wxc-avatar__image"
        onError={[Function]}
        src="./images/barbara.png"
      />
      <div
        className="wxc-avatar__status-icon-container"
      >
        <svg
          className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-inactive"
          fill="none"
          height={24}
          style={Object {}}
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 2.5C13.33 2.5 10.7199 3.29176 8.49981 4.77516C6.27974 6.25856 4.54942 8.36697 3.52763 10.8338C2.50585 13.3006 2.2385 16.015 2.7594 18.6337C3.28031 21.2525 4.56606 23.6579 6.45406 25.5459C8.34207 27.434 10.7475 28.7197 13.3663 29.2406C15.985 29.7615 18.6994 29.4942 21.1662 28.4724C23.633 27.4506 25.7414 25.7203 27.2248 23.5002C28.7082 21.2801 29.5 18.67 29.5 16C29.496 12.4208 28.0724 8.98935 25.5415 6.45847C23.0107 3.9276 19.5792 2.504 16 2.5ZM21.707 21.707C21.6142 21.7999 21.504 21.8736 21.3827 21.9238C21.2613 21.9741 21.1313 22 21 22C20.8687 22 20.7387 21.9741 20.6174 21.9238C20.496 21.8736 20.3858 21.7999 20.293 21.707L15.293 16.707C15.2001 16.6142 15.1264 16.504 15.0761 16.3827C15.0259 16.2613 15 16.1313 15 16V8C15 7.73478 15.1054 7.48043 15.2929 7.29289C15.4804 7.10536 15.7348 7 16 7C16.2652 7 16.5196 7.10536 16.7071 7.29289C16.8946 7.48043 17 7.73478 17 8V15.586L21.707 20.293C21.7999 20.3858 21.8735 20.496 21.9238 20.6173C21.974 20.7386 21.9999 20.8686 21.9999 20.9998C21.9999 21.1311 21.974 21.2611 21.9238 21.3824C21.8735 21.5037 21.7999 21.6139 21.707 21.7067V21.707Z"
          />
        </svg>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Invalid 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          ??
        </text>
      </svg>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Meeting 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <img
        alt="avatar"
        className="wxc-avatar__image"
        onError={[Function]}
        src="./images/barbara.png"
      />
      <div
        className="wxc-avatar__status-icon-container"
      >
        <svg
          className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-meeting"
          fill="none"
          height={24}
          style={Object {}}
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 13.75V24.75C4.50132 25.9431 4.97585 27.0869 5.81948 27.9305C6.66311 28.7741 7.80693 29.2487 9 29.25H23C24.1931 29.2487 25.3369 28.7742 26.1805 27.9305C27.0242 27.0869 27.4987 25.9431 27.5 24.75V13.75H4.5Z"
          />
          <path
            d="M23 6.25V3.75C23 3.48478 22.8946 3.23043 22.7071 3.04289C22.5196 2.85536 22.2652 2.75 22 2.75C21.7348 2.75 21.4804 2.85536 21.2929 3.04289C21.1054 3.23043 21 3.48478 21 3.75V6.25H11V3.75C11 3.48478 10.8946 3.23043 10.7071 3.04289C10.5196 2.85536 10.2652 2.75 10 2.75C9.73478 2.75 9.48043 2.85536 9.29289 3.04289C9.10536 3.23043 9 3.48478 9 3.75V6.25C7.80692 6.2513 6.66308 6.72582 5.81945 7.56945C4.97582 8.41308 4.5013 9.55692 4.5 10.75V11.75H27.5V10.75C27.4987 9.55692 27.0242 8.41308 26.1805 7.56945C25.3369 6.72582 24.1931 6.2513 23 6.25Z"
          />
        </svg>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar No Status 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <img
        alt="avatar"
        className="wxc-avatar__image"
        onError={[Function]}
        src="./images/barbara.png"
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Out Of Office 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <img
        alt="avatar"
        className="wxc-avatar__image"
        onError={[Function]}
        src="./images/barbara.png"
      />
      <div
        className="wxc-avatar__status-icon-container"
      >
        <svg
          className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-ooo"
          fill="none"
          height={24}
          style={Object {}}
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M28.9659 6.89408C28.4825 6.14577 27.7229 5.61887 26.8527 5.42827C25.9825 5.23767 25.0722 5.39882 24.3204 5.87658L17.8424 10.0135L11.4942 5.90098C11.0818 5.66915 10.6006 5.59112 10.1361 5.68076C9.67159 5.77041 9.25397 6.02193 8.95751 6.39057C8.66104 6.7592 8.50497 7.22106 8.51704 7.69396C8.52912 8.16687 8.70856 8.62016 9.02345 8.97318L12.4289 13.4705L9.52835 15.3227C8.39717 14.4846 7.10631 13.887 5.73535 13.5669C4.94483 13.4124 4.1251 13.5483 3.42675 13.9497C2.44435 14.5806 2.37885 15.2797 2.62495 15.6929L5.38675 20.1929L6.52135 22.1451C6.69097 22.4363 6.91768 22.6903 7.18787 22.8917C7.45807 23.0931 7.76618 23.2379 8.09371 23.3172C8.42124 23.3966 8.76143 23.409 9.09387 23.3537C9.4263 23.2983 9.74413 23.1763 10.0283 22.9951L16.5673 18.8184L17.0283 24.9619C17.0959 25.4311 17.332 25.8596 17.6924 26.1675C18.0529 26.4753 18.5132 26.6415 18.9872 26.6348H19.0019C19.4756 26.644 19.9366 26.4808 20.2991 26.1756C20.6616 25.8704 20.9009 25.444 20.9726 24.9756L22.4626 15.0556L27.9441 11.5556C28.3177 11.3171 28.6406 11.0071 28.8942 10.6436C29.1479 10.28 29.3273 9.87 29.4222 9.43699C29.5171 9.00397 29.5256 8.55649 29.4472 8.12018C29.3689 7.68387 29.2055 7.26702 28.9659 6.89408Z"
          />
        </svg>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Presenting 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <img
        alt="avatar"
        className="wxc-avatar__image"
        onError={[Function]}
        src="./images/barbara.png"
      />
      <div
        className="wxc-avatar__status-icon-container"
      >
        <svg
          className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-presenting"
          fill="none"
          height={24}
          style={Object {}}
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 5.5H7C5.80692 5.5013 4.66308 5.97582 3.81945 6.81945C2.97582 7.66308 2.5013 8.80692 2.5 10V21.7839C2.50124 23.0343 2.99853 24.2332 3.88272 25.1173C4.76692 26.0015 5.96578 26.4988 7.2162 26.5H24.7836C26.034 26.4986 27.2328 26.0013 28.1169 25.1172C29.0011 24.233 29.4985 23.0343 29.5 21.7839V10C29.4987 8.80693 29.0241 7.66311 28.1805 6.81948C27.3369 5.97585 26.1931 5.50132 25 5.5ZM20.707 16.707C20.5195 16.8945 20.2651 16.9998 20 16.9998C19.7348 16.9998 19.4804 16.8945 19.2929 16.707L17 14.4138V20.0007C17 20.2659 16.8946 20.5203 16.7071 20.7078C16.5196 20.8953 16.2652 21.0007 16 21.0007C15.7348 21.0007 15.4804 20.8953 15.2929 20.7078C15.1054 20.5203 15 20.2659 15 20.0007V14.4138L12.707 16.7067C12.5185 16.8895 12.2657 16.9909 12.0031 16.9889C11.7406 16.9869 11.4893 16.8817 11.3036 16.6961C11.1179 16.5104 11.0127 16.2592 11.0107 15.9966C11.0087 15.734 11.1101 15.4812 11.2929 15.2927L15.2929 11.2927C15.4804 11.1052 15.7348 10.9999 16 10.9999C16.2651 10.9999 16.5195 11.1052 16.707 11.2927L20.707 15.2927C20.8945 15.4802 20.9999 15.7345 21 15.9996C21.0001 16.2648 20.8948 16.5191 20.7074 16.7067L20.707 16.707Z"
          />
        </svg>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Self 1`] = `
Array [
  <div
    className="wxc wxc-avatar wxc-avatar--avatar-self"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-icon wxc-avatar__self-icon"
        height={24}
        style={Object {}}
        viewBox="0 0 32 32"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.9989 3.5C13.7548 3.5003 11.552 4.1047 9.62198 5.24976C7.69191 6.39481 6.10565 8.03831 5.02971 10.0077C3.95376 11.9772 3.4278 14.1999 3.50702 16.4427C3.58624 18.6855 4.26772 20.8656 5.47995 22.7542C5.33614 23.4793 5.0456 24.1674 4.62617 24.7762C4.20675 25.3849 3.66729 25.9015 3.04095 26.2942C2.42715 26.6975 2.41695 27.1965 2.61225 27.5295C2.98135 28.1604 4.35685 28.51 6.02095 28.51C7.73977 28.5206 9.44103 28.164 11.0109 27.4641C12.7145 28.2053 14.5618 28.5575 16.4185 28.4951C18.2752 28.4328 20.0947 27.9573 21.7446 27.1034C23.3945 26.2495 24.8334 25.0386 25.9565 23.5587C27.0797 22.0789 27.8589 20.3673 28.2374 18.5485C28.616 16.7297 28.5844 14.8494 28.145 13.0443C27.7056 11.2393 26.8695 9.55483 25.6973 8.11351C24.5251 6.6722 23.0464 5.51027 21.3688 4.71221C19.6912 3.91415 17.8567 3.50004 15.9989 3.5Z"
        />
      </svg>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Typing 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <div
        className="wxc wxc-loader"
      >
        <div
          className="wxc-loader__bullet"
        />
      </div>
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <img
        alt="avatar"
        className="wxc-avatar__image"
        onError={[Function]}
        src="./images/barbara.png"
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Avatar Without Image 1`] = `
Array [
  <div
    className="wxc wxc-avatar"
  >
    <div
      className="wxc-avatar__content"
    >
      <svg
        className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
        viewBox="0 0 40 40"
      >
        <text
          x="50%"
          y="50%"
        >
          BG
        </text>
      </svg>
      <div
        className="wxc-avatar__status-icon-container"
      >
        <svg
          className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-active"
          fill="none"
          height={24}
          style={Object {}}
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 2.5C13.33 2.5 10.7199 3.29176 8.49981 4.77516C6.27974 6.25856 4.54942 8.36697 3.52763 10.8338C2.50585 13.3006 2.2385 16.015 2.7594 18.6337C3.28031 21.2525 4.56606 23.6579 6.45406 25.5459C8.34207 27.434 10.7475 28.7197 13.3663 29.2406C15.985 29.7615 18.6994 29.4942 21.1662 28.4724C23.633 27.4506 25.7414 25.7203 27.2248 23.5002C28.7082 21.2801 29.5 18.67 29.5 16C29.496 12.4208 28.0724 8.98935 25.5415 6.45847C23.0107 3.9276 19.5792 2.504 16 2.5Z"
          />
        </svg>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
